// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Variants Respects accent variant 1`] = `
<div
  class="bg-accent text-accent-content find-me"
>
  <span>
    accent
  </span>
</div>
`;

exports[`Avatar Variants Respects base-100 variant 1`] = `
<div
  class="bg-base-100 text-base-content find-me"
>
  <span>
    base-100
  </span>
</div>
`;

exports[`Avatar Variants Respects base-200 variant 1`] = `
<div
  class="bg-base-200 text-base-content find-me"
>
  <span>
    base-200
  </span>
</div>
`;

exports[`Avatar Variants Respects base-300 variant 1`] = `
<div
  class="bg-base-300 text-base-content find-me"
>
  <span>
    base-300
  </span>
</div>
`;

exports[`Avatar Variants Respects error variant 1`] = `
<div
  class="bg-error text-error-content find-me"
>
  <span>
    error
  </span>
</div>
`;

exports[`Avatar Variants Respects info variant 1`] = `
<div
  class="bg-info text-info-content find-me"
>
  <span>
    info
  </span>
</div>
`;

exports[`Avatar Variants Respects neutral variant 1`] = `
<div
  class="bg-neutral text-neutral-content find-me"
>
  <span>
    neutral
  </span>
</div>
`;

exports[`Avatar Variants Respects primary variant 1`] = `
<div
  class="bg-primary text-primary-content find-me"
>
  <span>
    primary
  </span>
</div>
`;

exports[`Avatar Variants Respects secondary variant 1`] = `
<div
  class="bg-secondary text-secondary-content find-me"
>
  <span>
    secondary
  </span>
</div>
`;

exports[`Avatar Variants Respects success variant 1`] = `
<div
  class="bg-success text-success-content find-me"
>
  <span>
    success
  </span>
</div>
`;

exports[`Avatar Variants Respects warning variant 1`] = `
<div
  class="bg-warning text-warning-content find-me"
>
  <span>
    warning
  </span>
</div>
`;
